--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>-->
     <header class="main-header">
      <nav class="main-navigation">
-         <a class="logo">
+         <a class="logo" href="">
              <img src="" weight="" height="" alt="Логотип Нердс">
          </a>
          <ul class="site-navigation">
