--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Каталог— Дизайн-студия «Nerds</title>
+    <title>Каталог— Дизайн-студия Nerds</title>
   </head>
   <body>
     <header class="main-header">
