--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header class="main-header">
         <nav class="main-navigation">
             <a class="logo">
-                <img src="" weight="" height="" alt="Логотип Нердс">
+                <img src="img" weight="" height="" alt="Логотип Нердс">
             </a>
             <ul class="site-navigation">
                 <li>
@@ -35,9 +35,35 @@
           <h1 class="visually-hidden">Дизайн-студия Nerds</h1>
           <section class="promo">
               <h2 class="visually-hidden">О компании</h2>
-              <p class="promo-text">Долго, дорого, скрупулезно.</p><p>Математически выверенный дизайн 
-              для вашего сайта или мобильного приложения.</p>
-              <a class="button" href="">Узнать больше</a> 
+              <div class="slider">
+                  <input type="radio" id="btn-1" name="toggle" checked>
+                  <input type="radio" id="btn-2" name="toggle">
+                  <input type="radio" id="btn-3" name="toggle">
+                  <div class="slider-controls">
+                      <label for="btn-1"></label>
+                      <label for="btn-2"></label>
+                      <label for="btn-3"></label>
+                  </div>
+                  <div class="slider-inner">
+                      <div class="slider-slides">
+                          <div class="promo">
+                              <p class="promo-text">Долго, дорого, скрупулезно.</p>
+                              <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                              <a class="button" href="">Узнать больше</a>
+                          </div>
+                          <div class="promo">
+                              <p class="promo-text">Любим математику как никто другой</p>
+                              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+                              <a class="button" href="">Узнать больше</a>
+                          </div>
+                          <div class="promo">
+                              <p class="promo-text">Только ночь,только хардкор</p>
+                              <p>Работать днем, как все? Мы против этого.Ближе к полуночи работа только начинается.</p>
+                              <a class="button" href="">Узнать больше</a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </section>
           
           <section class="services">
