--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header class="main-header">
         <nav class="main-navigation">
             <a class="logo">
-                <img src="img" weight="" height="" alt="Логотип Нердс">
+                <img src="img/nerds-logo.svg" weight="160" height="65" alt="Логотип Нердс">
             </a>
             <ul class="site-navigation">
                 <li>
@@ -26,7 +26,9 @@
                 </li>
             </ul>
             <ul class="user-block">
-                <li><a href="">Корзина</a></li>
+                <li>
+                    <a href="">Корзина</a>
+                </li>
             </ul>
         </nav> 
       </header>
@@ -46,18 +48,18 @@
                   </div>
                   <div class="slider-inner">
                       <div class="slider-slides">
-                          <div class="promo">
-                              <p class="promo-text">Долго, дорого, скрупулезно.</p>
+                          <div class="slider-item">
+                              <p class="slider-text">Долго, дорого, скрупулезно.</p>
                               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
                               <a class="button" href="">Узнать больше</a>
                           </div>
-                          <div class="promo">
-                              <p class="promo-text">Любим математику как никто другой</p>
+                          <div class="slider-item">
+                              <p class="slider-text">Любим математику как никто другой</p>
                               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
                               <a class="button" href="">Узнать больше</a>
                           </div>
-                          <div class="promo">
-                              <p class="promo-text">Только ночь,только хардкор</p>
+                          <div class="slider-item">
+                              <p class="slider-text">Только ночь,только хардкор</p>
                               <p>Работать днем, как все? Мы против этого.Ближе к полуночи работа только начинается.</p>
                               <a class="button" href="">Узнать больше</a>
                           </div>
@@ -70,17 +72,17 @@
               <h2 class="visually-hidden">Услуги</h2>
               <ul class="services-list">
                   <li class="services-item">
-                      <h3>ВЕБ-САЙТЫ</h3>
+                      <h3>веб-сайты</h3>
                       <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                       <a class="button button-red" href="">заказать</a>
                   </li>
                   <li class="services-item">
-                      <h3>ПРИЛОЖЕНИЯ</h3>
+                      <h3>приложения</h3>
                       <p>Покорите топ-10 приложений в AppStore и Google Play</p>
                       <a class="button button-green" href="">заказать</a>
                   </li>
                   <li class="services-item">
-                      <h3>ПРЕЗЕНТАЦИИ</h3>
+                      <h3>презентации</h3>
                       <p>Вы даже не подозреваете, насколько вы изумительны!</p>
                       <a class="button button-yellow" href="">заказать</a>
                   </li>
@@ -102,7 +104,7 @@
                 </ul>
             </section>
             <section class="about-us-since">
-                <img src="" weight="" height="" alt="Логотип Нердс">
+                <img src="img/nerds-illustration.jpg" weight="360" height="208" alt="Логотип Нердс">
                 <p class="about-us-stats">с 2004 года любим точность во всем:</p>
                 <ul class="value">
                     <li class="value-item">
@@ -125,50 +127,42 @@
               <h2 class="visually-hidden">Партнеры</h2>
               <ul class="partners-list">
                   <li class="partner-item">
-                      <a href="">
-                          <img src="" width="" height="" alt="HTML Academy">
+                      <a href="#">
+                          <img src="img/html-academy-logo.png" width="260" height="180" alt="HTML Academy">
                       </a>
                   </li>
                   <li class="partner-item">
-                      <a href="">
-                          <img src="" width="" height="" alt="Borodinski">
+                      <a href="#">
+                          <img src="img/barbershop-logo.png" width="260" height="180" alt="Borodinski">
                       </a>
                   </li>
                   <li class="partner-item">
-                      <a href="">
-                          <img src="" width="" height="" alt="Pink">
+                      <a href="#">
+                          <img src="img/pink-logo.png" width="260" height="180" alt="Pink">
                       </a>
                   </li>
                   <li class="partner-item">
-                      <a href="">
-                          <img src="" width="" height="" alt="Mishka">
+                      <a href="#">
+                          <img src="img/mishka-logo.png" width="260" height="180" alt="Mishka">
                       </a>
                   </li>
               </ul>
           </section>
       </main>
+      
       <footer>
           <section class="address">
-              <p class="studio-name">NЁRDS DESIGN STUDIO</p>
-              <p class="address-footer">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+              <p class="studio-name">NЁRDS DESIGN STUDIO</p><address>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
               <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-              <a class=button href="">напишите нам</a> 
+              <a class="button" href="">напишите нам</a> 
           </section>
           <div class="footer-social">
               <ul>
-                  <li>
-                      <a class="social-button" href="">В контакте</a>
-                  </li>
-                  <li>
-                      <a class="social-button" href="">Фейсбук</a>
-                  </li>
-                  <li>
-                      <a class="social-button" href="">Инстаграм</a>
-                  </li>
+                  <li><a class="social-button" href="">В контакте</a></li><li><a class="social-button" href="">Фейсбук</a></li><li><a class="social-button" href="">Инстаграм</a></li>
               </ul>
               <p>Давайте дружить, это выгодно!</p>
-              <p>Скидка 10% для друзей из социальных сетей</p>    
+              <p>Скидка 10% для друзей из социальных сетей</p>   
           </div>
-      </footer>   
+      </footer>
     </body>
 </html>
