--- a/catalog.html
+++ b/catalog.html
@@ -8,13 +8,21 @@
     <header class="main-header">
      <nav class="main-navigation">
          <a class="logo" href="index.html">
-             <img src="" weight="" height="" alt="Логотип Нердс">
+             <img src="img/nerds-logo.svg" weight="160" height="65" alt="Логотип Нердс">
          </a>
          <ul class="site-navigation">
-             <li><a href="">Студия</a></li> 
-             <li><a href="">Клиенты</a></li>
-             <li class="site-navigation-current"><a href="">Магазин</a></li>
-             <li><a href="">Контакты</a></li>
+             <li>
+                 <a href="">Студия</a>
+             </li> 
+             <li>
+                 <a href="">Клиенты</a>
+             </li>
+             <li class="site-navigation-current">
+                 <a href="">Магазин</a>
+             </li>
+             <li>
+                 <a href="">Контакты</a>
+             </li>
          </ul>
          <ul class="user-block">
              <li>
@@ -49,7 +57,7 @@
             <h2 class="visually-hidden">Результаты поиска готовых макетов</h2>
             <ul class="catalog-list">
                 <li class="catalog-item-current">
-                    <img src="" width="" height="" alt="Макет Седона">
+                    <img src="img/sedona.jpg" width="360" height="616" alt="Макет Седона">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Sedona</h3>
@@ -58,8 +66,8 @@
                         <span class="button">9900руб.</span>
                     </div>
                 </li>
-                <li class="catalog-item-current">
-                    <img src="" width="" height="" alt="Макет Пинк">
+                <li class="catalog-item">
+                    <img src="img/pink.jpg" width="360" height="616" alt="Макет Пинк">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Pink app</h3>
@@ -68,8 +76,8 @@
                         <span class="button">9900руб.</span>
                     </div>
                 </li>
-                <li class="catalog-item-current">
-                    <img src="" width="" height="" alt="Макет Бородинский">
+                <li class="catalog-item">
+                    <img src="img/barbershop.jpg" width="360" height="616" alt="Макет Бородинский">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Barbershop</h3>
@@ -78,8 +86,8 @@
                         <span class="button">9900руб.</span>
                     </div>
                 </li>
-                <li class="catalog-item-current">
-                    <img src="" width="" height="" alt="Макет Мишка">
+                <li class="catalog-item">
+                    <img src="img/mishka.jpg" width="360" height="616" alt="Макет Мишка">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Mishka</h3>
@@ -88,8 +96,8 @@
                         <span class="button">9900руб.</span>
                     </div>
                 </li>
-                <li class="catalog-item-current">
-                    <img src="" width="" height="" alt="Макет A plus">
+                <li class="catalog-item">
+                    <img src="img/a-plus.jpg" width="360" height="616" alt="Макет A plus">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>A plus</h3>
@@ -98,8 +106,8 @@
                         <span class="button">9900руб.</span>
                     </div>
                 </li> 
-                <li class="catalog-item-current">
-                    <img src="" width="" height="" alt="Макет Кваст">
+                <li class="catalog-item">
+                    <img src="img/kvast.jpg" width="360" height="616" alt="Макет Кваст">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Кваст</h3>
