--- a/catalog.html
+++ b/catalog.html
@@ -8,25 +8,25 @@
     <header class="main-header">
      <nav class="main-navigation">
          <a class="logo" href="index.html">
-             <img src="img/nerds-logo.svg" weight="160" height="65" alt="Логотип Нердс">
+             <img src="img/logo-nerds.svg" weight="160" height="65" alt="Логотип Нердс">
          </a>
          <ul class="site-navigation">
              <li>
-                 <a href="">Студия</a>
+                 <a href="#">Студия</a>
              </li> 
              <li>
-                 <a href="">Клиенты</a>
+                 <a href="#">Клиенты</a>
              </li>
              <li class="site-navigation-current">
-                 <a href="">Магазин</a>
+                 <a>Магазин</a>
              </li>
              <li>
-                 <a href="">Контакты</a>
+                 <a href="#">Контакты</a>
              </li>
          </ul>
          <ul class="user-block">
              <li>
-                 <a href="">Корзина</a>
+                 <a href="#">Корзина</a>
              </li>
          </ul>
         </nav>
@@ -57,7 +57,7 @@
             <h2 class="visually-hidden">Результаты поиска готовых макетов</h2>
             <ul class="catalog-list">
                 <li class="catalog-item-current">
-                    <img src="img/sedona.jpg" width="360" height="616" alt="Макет Седона">
+                    <img src="img/img-sedona.jpg" width="360" height="616" alt="Макет Седона">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Sedona</h3>
@@ -67,7 +67,7 @@
                     </div>
                 </li>
                 <li class="catalog-item">
-                    <img src="img/pink.jpg" width="360" height="616" alt="Макет Пинк">
+                    <img src="img/img-pink.jpg" width="360" height="616" alt="Макет Пинк">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Pink app</h3>
@@ -77,7 +77,7 @@
                     </div>
                 </li>
                 <li class="catalog-item">
-                    <img src="img/barbershop.jpg" width="360" height="616" alt="Макет Бородинский">
+                    <img src="img/img-barbershop.jpg" width="360" height="616" alt="Макет Бородинский">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Barbershop</h3>
@@ -87,7 +87,7 @@
                     </div>
                 </li>
                 <li class="catalog-item">
-                    <img src="img/mishka.jpg" width="360" height="616" alt="Макет Мишка">
+                    <img src="img/img-mishka.jpg" width="360" height="616" alt="Макет Мишка">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Mishka</h3>
@@ -97,7 +97,7 @@
                     </div>
                 </li>
                 <li class="catalog-item">
-                    <img src="img/a-plus.jpg" width="360" height="616" alt="Макет A plus">
+                    <img src="img/img-aplus.jpg" width="360" height="616" alt="Макет A plus">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>A plus</h3>
@@ -107,7 +107,7 @@
                     </div>
                 </li> 
                 <li class="catalog-item">
-                    <img src="img/kvast.jpg" width="360" height="616" alt="Макет Кваст">
+                    <img src="img/img-kvast.jpg" width="360" height="616" alt="Макет Кваст">
                     <div class="catalog-pop-up">
                         <a href="catalog-item-link">
                             <h3>Кваст</h3>
@@ -135,7 +135,7 @@
         </section>
         <div class="footer-social">
             <ul>
-                <li><a class="social-button" href="">В контакте</a></li><li><a class="social-button" href="">Фейсбук</a></li><li><a class="social-button" href="">Инстаграм</a></li>
+                <li><a class="social-button" href="#">В контакте</a></li><li><a class="social-button" href="#">Фейсбук</a></li><li><a class="social-button" href="#">Инстаграм</a></li>
             </ul>
             <p>Давайте дружить, это выгодно!</p>
             <p>Скидка 10% для друзей из социальных сетей</p>     
