--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
       <header class="main-header">
         <nav class="main-navigation">
             <a class="logo">
-                <img src="img/nerds-logo.svg" weight="160" height="65" alt="Логотип Нердс">
+                <img src="img/logo-nerds.svg" weight="160" height="65" alt="Логотип Нердс">
             </a>
             <ul class="site-navigation">
                 <li>
-                    <a href="">Студия</a>
+                    <a href="#">Студия</a>
                 </li>
                 <li>
-                    <a href="">Клиенты</a>
+                    <a href="#">Клиенты</a>
                 </li>
                 <li class="site-navigation-current">
                     <a href="catalog.html">Магазин</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a href="#">Контакты</a>
                 </li>
             </ul>
             <ul class="user-block">
                 <li>
-                    <a href="">Корзина</a>
+                    <a href="#">Корзина</a>
                 </li>
             </ul>
         </nav> 
@@ -51,17 +51,17 @@
                           <div class="slider-item">
                               <p class="slider-text">Долго, дорого, скрупулезно.</p>
                               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-                              <a class="button" href="">Узнать больше</a>
+                              <a class="button" href="#">Узнать больше</a>
                           </div>
                           <div class="slider-item">
                               <p class="slider-text">Любим математику как никто другой</p>
                               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-                              <a class="button" href="">Узнать больше</a>
+                              <a class="button" href="#">Узнать больше</a>
                           </div>
                           <div class="slider-item">
                               <p class="slider-text">Только ночь,только хардкор</p>
                               <p>Работать днем, как все? Мы против этого.Ближе к полуночи работа только начинается.</p>
-                              <a class="button" href="">Узнать больше</a>
+                              <a class="button" href="#">Узнать больше</a>
                           </div>
                       </div>
                   </div>
@@ -74,17 +74,17 @@
                   <li class="services-item">
                       <h3>веб-сайты</h3>
                       <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                      <a class="button button-red" href="">заказать</a>
+                      <a class="button button-red" href="#">заказать</a>
                   </li>
                   <li class="services-item">
                       <h3>приложения</h3>
                       <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-                      <a class="button button-green" href="">заказать</a>
+                      <a class="button button-green" href="#">заказать</a>
                   </li>
                   <li class="services-item">
                       <h3>презентации</h3>
                       <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-                      <a class="button button-yellow" href="">заказать</a>
+                      <a class="button button-yellow" href="#">заказать</a>
                   </li>
               </ul>
           </section>
@@ -104,7 +104,7 @@
                 </ul>
             </section>
             <section class="about-us-since">
-                <img src="img/nerds-illustration.jpg" weight="360" height="208" alt="Логотип Нердс">
+                <img src="img/illustration-nerds.jpg" weight="360" height="208" alt="Логотип Нердс">
                 <p class="about-us-stats">с 2004 года любим точность во всем:</p>
                 <ul class="value">
                     <li class="value-item">
@@ -128,22 +128,22 @@
               <ul class="partners-list">
                   <li class="partner-item">
                       <a href="#">
-                          <img src="img/html-academy-logo.png" width="260" height="180" alt="HTML Academy">
+                          <img src="img/logo-html-academy.png" width="260" height="180" alt="HTML Academy">
                       </a>
                   </li>
                   <li class="partner-item">
                       <a href="#">
-                          <img src="img/barbershop-logo.png" width="260" height="180" alt="Borodinski">
+                          <img src="img/logo-barbershop.png" width="260" height="180" alt="Borodinski">
                       </a>
                   </li>
                   <li class="partner-item">
                       <a href="#">
-                          <img src="img/pink-logo.png" width="260" height="180" alt="Pink">
+                          <img src="img/logo-pink.png" width="260" height="180" alt="Pink">
                       </a>
                   </li>
                   <li class="partner-item">
                       <a href="#">
-                          <img src="img/mishka-logo.png" width="260" height="180" alt="Mishka">
+                          <img src="img/logo-mishka.png" width="260" height="180" alt="Mishka">
                       </a>
                   </li>
               </ul>
@@ -154,11 +154,11 @@
           <section class="address">
               <p class="studio-name">NЁRDS DESIGN STUDIO</p><address>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
               <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-              <a class="button" href="">напишите нам</a> 
+              <a class="button" href="#">напишите нам</a> 
           </section>
           <div class="footer-social">
               <ul>
-                  <li><a class="social-button" href="">В контакте</a></li><li><a class="social-button" href="">Фейсбук</a></li><li><a class="social-button" href="">Инстаграм</a></li>
+                  <li><a class="social-button" href="#">В контакте</a></li><li><a class="social-button" href="#">Фейсбук</a></li><li><a class="social-button" href="#">Инстаграм</a></li>
               </ul>
               <p>Давайте дружить, это выгодно!</p>
               <p>Скидка 10% для друзей из социальных сетей</p>   
