--- a/index.html
+++ b/index.html
@@ -151,6 +151,27 @@
       </main>
       
       <footer>
+          <div class="text-us">
+              <form class="text-form" action="https://echo.htmlacademy.ru" method="post">
+                  <p class="text-us-header">Напишите нам</p>
+                  <ul class="text-us-list">
+                      <li>
+                          <label for="put-your-name">Ваше имя:</label><br>
+                          <input type="text" name="your-name" value="Имя Фамилия" id="put-your-name">
+                      </li>
+                      <li>
+                          <label for="put-your-email">Ваш e-mail:</label><br>
+                          <input type="text" name="your-email" value="email@example.com" id="put-your-email">
+                      </li>
+                      <li>
+                          <label for="put-your-comment">Текст письма:</label><br>
+                          <textarea name="your-comment" id="put-your-comment" rows="10">В свободной форме</textarea>
+                      </li>
+                  </ul>
+                  <button class="button" type="submit">Отправить</button>
+              </form>
+              <button class="modal-close" type="button">Закрыть</button>
+          </div>
           <section class="address">
               <p class="studio-name">NЁRDS DESIGN STUDIO</p><address>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
               <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
