--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
      <nav class="main-navigation">
          <a class="logo" href="index.html">
-             <img src="img/logo-nerds.svg" weight="160" height="65" alt="Логотип Нердс">
+             <img src="img/logo-nerds.svg" width="160" height="65" alt="Логотип Нердс">
          </a>
          <ul class="site-navigation">
              <li>
@@ -39,24 +39,24 @@
             <h2 class="visually-hidden">Фильтр товаров</h2>
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                 <fieldset>
-                    <legend>cтоимость:</legend><br>
-                    <input type="range"><br>
+                    <legend>cтоимость:</legend>
+                    <input type="range">
                     <label>от<input type="text" value="0"></label>
-                    <label>до<input type="text" value="0"></label><br>
+                    <label>до<input type="text" value="0"></label>
                 </fieldset>
                 <fieldset>
                     <legend>сетка:</legend>
                     <ul>
                         <li class="filter-option">
-                            <input class="visally-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="adaptive" id="adaptive-type" checked>
+                            <input class="visally-hidden filter-input filter-input-radio" id="adaptive-type" type="radio" name="grid-type" value="adaptive"  checked>
                             <label for="adaptive-type">Адаптивная</label>
                         </li>
                         <li class="filter-option">
-                            <input class="visally-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="fixed" id="fixed-type">
+                            <input class="visally-hidden filter-input filter-input-radio" id="fixed-type" type="radio" name="grid-type" value="fixed" >
                             <label for="fixed-type">Фиксированная</label>
                         </li>
                         <li class="filter-option">
-                            <input class="visally-hidden filter-input filter-input-radio" type="radio" name="grid-type" value="fixed" id="reflowable-type">
+                            <input class="visally-hidden filter-input filter-input-radio" id="reflowable-type" type="radio" name="grid-type" value="fixed" >
                             <label for="reflowable-type">Резиновая</label>
                         </li>
                     </ul>
@@ -64,24 +64,24 @@
                 <fieldset>
                     <legend>особенности:</legend>
                     <ul>
-                        <li class="filter option">
-                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-slider" id="feature-slider" checked>
+                        <li class="features">
+                            <input class="visually-hidden filter-input filter-input-checkbox" id="feature-slider" type="checkbox" name="feature-item"  checked>
                             <label for="feature-slider">Слайдер</label>
                         </li>
-                        <li class="filter option">
-                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-advantages" id="feature-advantages">
+                        <li class="features">
+                            <input class="visually-hidden filter-input filter-input-checkbox" id="feature-advantages" type="checkbox" name="feature-item" >
                             <label for="feature-advantages">Блок преимуществ</label>
                         </li>
-                        <li class="filter option">
-                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-news" id="feature-news" checked>
+                        <li class="features">
+                            <input class="visually-hidden filter-input filter-input-checkbox" id="feature-news" type="checkbox" name="feature-item"  checked>
                             <label for="feature-news">Новости</label>
                         </li>
-                        <li class="filter option">
-                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-gallery" id="feature-gallery">
+                        <li class="features">
+                            <input class="visually-hidden filter-input filter-input-checkbox" id="feature-gallery" type="checkbox" name="feature-item">
                             <label for="feature-gallery">Галерея</label>
                         </li>
-                        <li class="filter option">
-                            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="option-basket" id="feature-basket">
+                        <li class="features">
+                            <input class="visually-hidden filter-input filter-input-checkbox" id="feature-basket" type="checkbox" name="feature-item">
                             <label for="feature-basket">Блок преимуществ</label>
                         </li>
                     </ul>
@@ -94,29 +94,29 @@
             <form class="sort-form" action="https://echo.htmlacademy.ru" method="get">
                 <p>сортировать:</p>
                 <ul class="sort-сategory">
-                     <li>
-                         <input type="radio" name="sort-category-item" value="by-price" id="sort-by-price" checked>
-                         <label for="sort-by-price"> по цене</label>
-                     </li>
-                     <li>
-                         <input type="radio" name="sort-category-item" value="by-type" id="sort-by-type">
-                         <label for="sort-by-type">по типу</label>
-                     </li>
-                     <li>
-                         <input type="radio" name="sort-category-item" value="by-name" id="sort-by-name">
-                         <label for="sort-by-name">по названию</label>
-                     </li>
+                    <li>
+                        <input type="radio" id="sort-by-price" name="sort-category-item" value="by-price" checked>
+                        <label for="sort-by-price"> по цене</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="sort-by-type" name="sort-category-item" value="by-type">
+                        <label for="sort-by-type">по типу</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="sort-by-name" name="sort-category-item" value="by-name" >
+                        <label for="sort-by-name">по названию</label>
+                    </li>
                 </ul>
                 <ul class="sort-priority">
                     <li>
-                        <input type="radio" name="sort-priority" value="by-descending" id="sort-by-descending" checked>
+                        <input type="radio" id="sort-by-descending" name="sort-priority" value="by-descending" checked>
                         <label for="sort-by-descending">
-                            <title class="visually-hidden">сортировать по убыванию</title>
+<!--                            <title class="visually-hidden">сортировать по убыванию</title>-->
                             <img src="img/icon-down-dir.svg" width="11" height="10" alt="сортировка по убыванию">
                         </label>
                     </li>
                     <li>
-                        <input type="radio" name="sort-priority" value="by-ascending" id="sort-by-ascending">
+                        <input type="radio" id="sort-by-ascending" name="sort-priority" value="by-ascending">
                         <label for="sort-by-ascending">
                             <title class="visually-hidden">сортировать по возрастанию</title>
                             <img src="img/icon-up-dir.svg" width="11" height="10" alt="сортировка по убыванию">
@@ -200,30 +200,9 @@
     </main>
       
     <footer>
-        <div class="text-us">
-            <form class="text-form" action="https://echo.htmlacademy.ru" method="post">
-                <p class="text-us-header">Напишите нам</p>
-                <ul class="text-us-list">
-                    <li>
-                        <label for="put-your-name">Ваше имя:</label><br>
-                        <input type="text" name="your-name" value="Имя Фамилия" id="put-your-name">
-                    </li>
-                    <li>
-                        <label for="put-your-email">Ваш e-mail:</label><br>
-                        <input type="text" name="your-email" value="email@example.com" id="put-your-email">
-                    </li>
-                    <li>
-                        <label for="put-your-comment">Текст письма:</label><br>
-                        <textarea name="your-comment" id="put-your-comment" rows="10">В свободной форме</textarea>
-                    </li>
-                </ul>
-                <button class="button" type="submit">Отправить</button>
-            </form>
-            <button class="modal-close" type="button">Закрыть</button>
-        </div>
         <section class="address">
             <p class="studio-name">NЁRDS DESIGN STUDIO</p>
-            <address>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8</address>
+            <address>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
             <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
             <a class="button" href="">напишите нам</a> 
         </section>
@@ -234,6 +213,28 @@
             <p>Давайте дружить, это выгодно!</p>
             <p>Скидка 10% для друзей из социальных сетей</p>     
         </div>
-    </footer>    
-  </body>
+    </footer>      
+      
+    <div class="modal-user-text">
+        <form class="user-text-form" action="https://echo.htmlacademy.ru" method="post">
+            <p class="text-header">Напишите нам</p>
+            <ul class="user-text-list">
+                <li>
+                    <label for="name-field">Ваше имя:</label>
+                    <input type="text" id="name-field" name="user-text-name" placeholder="Имя Фамилия">
+                </li>
+                <li>
+                    <label for="email-field">Ваш e-mail:</label>
+                    <input type="text"  id="email-field" name="user-text-email" placeholder="email@example.com">
+                </li>
+                <li>
+                    <label for="comment-field">Текст письма:</label>
+                    <textarea  id="comment-field" name="user-text-comment" rows="10" placeholder="В свободной форме"></textarea>
+                </li>
+            </ul>
+            <button class="button" type="submit">Отправить</button>
+        </form>
+        <button class="modal-close" type="button">Закрыть</button>
+      </div>
+    </body>
 </html>
