--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Главная — Дизайн-студия Nerds</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 <!--    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>-->
@@ -18,7 +21,7 @@
                 <li>
                     <a href="#">Клиенты</a>
                 </li>
-                <li class="site-navigation-current">
+                <li>
                     <a href="catalog.html">Магазин</a>
                 </li>
                 <li>
@@ -49,19 +52,19 @@
                   <div class="slider-inner">
                       <div class="slider-slides">
                           <div class="slider-item">
-                              <p class="slider-text">Долго, дорого, скрупулезно.</p>
+                              <p class="slider-text">Долго, дорого,<br> скрупулезно.</p>
                               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-                              <a class="button" href="#">Узнать больше</a>
+                              <a class=" button button-red" href="#">Узнать больше</a>
                           </div>
                           <div class="slider-item">
-                              <p class="slider-text">Любим математику как никто другой</p>
+                              <p class="slider-text">Любим математику<br> как никто другой</p>
                               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-                              <a class="button" href="#">Узнать больше</a>
+                              <a class="button button button-red" href="#">Узнать больше</a>
                           </div>
                           <div class="slider-item">
-                              <p class="slider-text">Только ночь,только хардкор</p>
+                              <p class="slider-text">Только ночь,<br>только хардкор</p>
                               <p>Работать днем, как все? Мы против этого.Ближе к полуночи работа только начинается.</p>
-                              <a class="button" href="#">Узнать больше</a>
+                              <a class="button button-red" href="#">Узнать больше</a>
                           </div>
                       </div>
                   </div>
@@ -92,6 +95,7 @@
         <section class="about-us">
             <h2 class="visually hidden">о нас</h2>
             <section class="about-us-main">
+                <h3 class="visually-hidden">Наши принципы</h3>
                 <p class="about-us-advantages">Мы — маленькая, но гордая дизайн-студия из Краснодара.
                 </p>
                 <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.
@@ -104,6 +108,7 @@
                 </ul>
             </section>
             <section class="about-us-since">
+                <h3 class="visually-hidden">Данные о нас</h3>
                 <img src="img/illustration-nerds.jpg" width="360" height="208" alt="Логотип Нердс">
                 <p class="about-us-stats">с 2004 года любим точность во всем:</p>
                 <ul class="value">
@@ -152,15 +157,18 @@
       
       <footer>
           <section class="address">
+              <h3 class="visually-hidden">Адрес</h3>
               <p class="studio-name">NЁRDS DESIGN STUDIO</p><address>191186, Санкт-Петербург,ул. Б. Конюшенная, д. 19/8</address>
               <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-              <a class="button" href="#">напишите нам</a> 
+              <a class="button button-red" href="#">напишите нам</a> 
           </section>
           <div class="footer-social">
               <ul>
-                  <li><a class="social-button" href="#">В контакте</a></li><li><a class="social-button" href="#">Фейсбук</a></li><li><a class="social-button" href="#">Инстаграм</a></li>
+                  <li class="social-button"><a href="#">В контакте</a></li>
+                  <li class="social-button"><a href="#">Фейсбук</a></li>
+                  <li class="social-button"><a href="#">Инстаграм</a></li>
               </ul>
-              <p>Давайте дружить, это выгодно!</p>
+              <p class="slogan">Давайте дружить, это выгодно!</p>
               <p>Скидка 10% для друзей из социальных сетей</p>   
           </div>
       </footer>
@@ -182,7 +190,7 @@
                     <textarea  id="comment-field" name="user-text-comment" rows="10" placeholder="В свободной форме"></textarea>
                 </li>
             </ul>
-            <button class="button" type="submit">Отправить</button>
+            <button class="button button-red" type="submit">Отправить</button>
         </form>
         <button class="modal-close" type="button">Закрыть</button>
       </div>
