--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Каталог —Дизайн-студия Nerds</title>
+    <title>Каталог — Дизайн-студия Nerds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -114,14 +114,14 @@
                     <li>
                         <input type="radio" id="sort-by-descending" name="sort-priority" value="by-descending" checked>
                         <label for="sort-by-descending">
-<!--                            <title class="visually-hidden">сортировать по убыванию</title>
+                           <span class="visually-hidden">сортировать по убыванию</span>
                             <img src="img/icon-down-dir.svg" width="11" height="10" alt="сортировка по убыванию">
                         </label>
                     </li>
                     <li>
                         <input type="radio" id="sort-by-ascending" name="sort-priority" value="by-ascending">
                         <label for="sort-by-ascending">
-                            <title class="visually-hidden">сортировать по возрастанию</title>-->
+                            <span class="visually-hidden">сортировать по возрастанию</span>
                             <img src="img/icon-up-dir.svg" width="11" height="10" alt="сортировка по убыванию">
                         </label>
                     </li>
