--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 <!--    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>-->
       <header class="main-header">
-         <nav class="main-navigation">
+         <div clas="wrap-container"><nav class="main-navigation">
             <a class="logo">
                 <img src="img/logo-nerds.svg" width="160" height="65" alt="Логотип Нердс">
             </a>
@@ -33,7 +33,7 @@
                     <a href="#">Корзина</a>
                 </li>
             </ul>
-        </nav>
+        </nav></div>
       </header>
       
       <main class="container">
@@ -92,7 +92,7 @@
               </ul>
           </section>
         
-        <section class="about-us"><div class="wrap-about-us">
+        <section class="about-us">
             <h2 class="visually hidden">о нас</h2>
             <section class="about-us-main">
                 <h3 class="visually-hidden">Наши принципы</h3>
@@ -127,7 +127,7 @@
                     </li>
                 </ul> 
             </section> 
-          </div></section>
+          </section>
           <section class="partners">
               <h2 class="visually-hidden">Партнеры</h2>
               <ul class="partners-list">
