--- a/catalog.html
+++ b/catalog.html
@@ -35,9 +35,9 @@
          </nav></div>
     </header>
     
-    <main class="container">
-        <promo><h1 class="page-title">Магазин готовых шаблонов</h1></promo>
-        <div class="wrap-filters-catalog"><section class="filters">
+    <main>
+        <section class="promo"><div class="container"><h1 class="page-title">Магазин готовых шаблонов</h1></div></section>
+        <div class="wrap-filters-catalog container"><section class="filters">
             <h2 class="visually-hidden">Фильтр товаров</h2>
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                 <fieldset>
