--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
                 </ul>
                 <ul class="user-block">
                     <li>
-                        <a href="#">Корзина</a>
+                        <a class="login-link" href="#">Корзина</a>
                     </li>
                 </ul>
             </nav>
